samples/_failures_safe/1761223064_50d57d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ac8e5b4c.c: In function ‘main’:
./samples/SAFE/__tmp_ac8e5b4c.c:148:5: error: expected declaration or statement at end of input
  148 |     }
      |     ^
